--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "css-loader": "^0.26.1",
     "react": "^15.4.1",
+    "react-css-modules": "^4.1.0",
     "react-dom": "^15.4.1",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
