--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^15.4.1",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.1",
+    "react-simple-pie-chart": "^0.4.0",
     "redux": "^3.6.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
